--- a/cards-flexbox-inicio/css/styles.css
+++ b/cards-flexbox-inicio/css/styles.css
@@ -51,6 +51,8 @@ img {
 @media screen and (min-width:480px) {
     .contenido-principal {
         /*flex aquí (sólamente tres propiedades) 3 puntos*/
+        display: flex;
+        flex-direction: row;
     }
     .entrada {
         /*flex aquí (una linea, en realidad son tres propiedades en una ;) 1 punto*/
@@ -60,6 +62,8 @@ img {
 
 @media screen and (min-width:768px) {
     .entrada {
+        display: flex;
+        flex-direction: row;
           /*flex aquí (una linea, en realidad son tres propiedades en una ;) 1 punto*/
     }
 }
